--- a/css/Desing 14.css
+++ b/css/Desing 14.css
@@ -3,6 +3,9 @@
     --light: #F5F5F5;
     --dark: #353535;
 }
+*{
+    transition: 100ms !important;
+}
 
 ::selection {
     background-color: var(--primary);
@@ -33,6 +36,7 @@ html {
 .nav-item {
     color: var(--dark);
     transition: 2s all ease;
+        font-size: calc(.8rem + .5vw) !important;
 }
 
 .nav-item:hover {
@@ -55,6 +59,10 @@ html {
 
 .navbar-brand {
     color: var(--primary) !important;
+}
+.navbar-brand h2{
+    font-size: calc(1.1rem + 2.3vw) !important;
+
 }
 
 .navbar {
@@ -122,15 +130,15 @@ html {
     left: 50%;
 }
 
-.navbar-collapse {
-    transition: 600ms ease all !important;
+.collapse {
+    transition: 3.9s;
 }
 
 .sm-navbar {
     display: flex !important;
     flex-direction: column !important;
     justify-content: space-evenly !important;
-    height: calc(100vh - 61px);
+    /* height: calc(100vh - 61px); */
     position: fixed !important;
     width: 100% !important;
     top: 61px !important;
@@ -305,7 +313,22 @@ html {
 .team-social a i {
     color: var(--primary);
 }
-
+.project-card:nth-child(1){
+    transform: translateX(300%);
+    transition: 300ms  ease-in;
+}
+.project-card:nth-child(2){
+    transform: translateY(300%);
+    transition: 800ms  ease-in;
+}
+.project-card:nth-child(3){
+    transform: translateX(300%);
+    transition: 1000ms  ease-in;
+}
+.project-card:nth-child(4){
+    transform: translateY(300%);
+    transition: 1400ms ease-in ;
+}
 .team-card:hover .team-social {
     left: 10px;
     opacity: 1;
@@ -329,4 +352,7 @@ html {
 }
 .dark-border{
     border-color: var(--primary) !important;
+}
+.no-translat{
+    transform: translate(0) !important;
 }
